--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "fakerphp/faker": "^1.23"
+        "fakerphp/faker": "^1.23",
+        "symfony/polyfill-uuid": "^1.28"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest"
