--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,27 @@
             "Maven\\ProjectPractice\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Maven\\ProjectPractice\\UnitTest\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Shilov Ilya"
         }
     ],
+    "scripts": {
+        "test": "phpunit tests --testdox --colors",
+        "test:coverage": "php -dxdebug.mode=coverage vendor/bin/phpunit tests --coverage-html coverage-report --coverage-filter src"
+    },
     "require": {
         "fakerphp/faker": "^1.23",
         "symfony/polyfill-uuid": "^1.28",
         "ext-pdo": "*"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-latest"
+        "roave/security-advisories": "dev-latest",
+        "phpunit/phpunit": "^10.4"
     }
 }
