--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require": {
         "fakerphp/faker": "^1.23",
         "symfony/polyfill-uuid": "^1.28",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "symfony/http-foundation": "^6.3"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
