--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "fakerphp/faker": "^1.23",
         "symfony/polyfill-uuid": "^1.28",
         "ext-pdo": "*",
-        "symfony/http-foundation": "^6.3"
+        "symfony/http-foundation": "^6.3",
+        "monolog/monolog": "^3.5"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
